--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,13 @@
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "fakerphp/faker": "^1.23"
+        "fakerphp/faker": "^1.23",
+        "ext-gd": "*",
+        "ext-zip": "*",
+        "ext-intl": "*",
+       "ext-pdo": "*",
+       "ext-pdo_mysql": "*",
+       "ext-bcmath": "*"
     },
     "require-dev": {
         
